# PersonalMusicBrowser

./: .gitignore  .pre-commit-config.yaml  Makefile  environment.yaml  manage.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
PersonalMusicBrowser/: asgi.py  urls.py  wsgi.py
PersonalMusicBrowser/Compositions/: apps.py  models.py  views.py
PersonalMusicBrowser/Discography/: admin.py  apps.py  forms.py  models.py  views.py
PersonalMusicBrowser/Discography/migrations/: 0001_initial.py  0002_auto_20210117_2110.py
music_ara_client/: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
music_ara_client/docs/agents/: README.md
music_ara_client/docs/humans/: README.md
music_ara_client/scripts/: reaper_ci.sh
music_ara_client/src/: ARAFilePathExtractor.cpp  ARAFilePathExtractor.h  HubClient.cpp  HubClient.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
music_ara_client/tests/: test_ara_file_path_extractor.cpp  test_hub_client.cpp
music_browser/: .env.example  .pre-commit-config.yaml  Cargo.toml  Cargo_backup.toml  Dockerfile.backup  Makefile  README.md  bulkImportExample.md  docker-compose.yml
music_browser/migrations/: 0001_initial.sql  0002_merge_manual_model.sql  0003_scheduling.sql  0004_fix_constraints_and_features.sql  0004_practice_sets_priority.sql
music_browser/scripts/: install-hooks.sh
music_browser/src/: backup.rs  backup_main.rs  bulk_import.rs  jobs.rs  lib.rs  main.rs  multipart_upload.rs
music_browser/src/db/: mod.rs  models.rs  pool.rs  queries.rs
music_browser/templates/: album_form.html  albums.html  artist_form.html  artists.html  band_form.html  bands.html  base.html  exercise_form.html  exercises.html  goal_form.html  goals.html  instrument_form.html  instruments.html  job_detail.html  jobs.html  kanban.html  practice.html  practice_old.html  production.html  profile.html  recordings.html  schedule.html  set_form.html  sets.html  song_file_form.html  song_form.html  songs.html  stage_form.html  step_form.html
music_browser/tests/: db_tests.rs  form_tests.rs
templates/: base.html
templates/Discography/: song_form.html  song_list.html
